# Sudsakorn_ROS

./: .gitignore
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: package.sh
log/: latest_build
src/sudsakhon_automation/: package.xml  setup.cfg  setup.py
src/sudsakhon_automation/sudsakhon_automation/: bridge_node.py
src/sudsakhon_dashbroad/: setup.cfg  setup.py
src/sudsakhon_dashbroad/sudsakhon_dashbroad/: api_backend.py
src/sudsakhon_detectchair/: package.xml  setup.cfg  setup.py
src/sudsakhon_detectchair/sudsakhon_detectchair/: chair_subscriber.py
src/sudsakhon_mainprogram/: setup.cfg  setup.py
src/sudsakhon_mainprogram/sudsakhon_mainprogram/: actuators.py  back.txt  main_controller.py  robot_position.py  servo_system.py
src/sudsakhon_objectdetechtion/: package.xml  setup.cfg  setup.py
src/sudsakhon_objectdetechtion/sudsakhon_objectdetechtion/: object_display_sub.py
src/sudsakhon_odom/: setup.cfg  setup.py
src/sudsakhon_odom/sudsakhon_odom/: BACKUP.TXT  sudsakhon_odom_node.py  sudsakhon_odom_node_tune.py  sudsakhon_odom_nodebackup.txt
src/sudsakhon_transformation/: setup.cfg  setup.py
src/sudsakhon_transformation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/sudsakhon_transformation/log/: latest_build
src/sudsakhon_transformation/sudsakhon_transformation/: tf_node.py
src/sudsakhon_ultrasonic/: package.xml  setup.cfg  setup.py
src/sudsakhon_ultrasonic/sudsakhon_ultrasonic/: ultrasonic_node.py
(+57 files in other folders)
