<?xml version="1.0"?>
<package format="3">
  <name>sudsakhon_objectdetechtion</name>
  <version>0.0.1</version>
  <description>YOLO + Depth object detection publisher using Astra camera</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>